--- a/VideoFacesDetection/templates/upload.html
+++ b/VideoFacesDetection/templates/upload.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %} 
 Videos 
 
@@ -8,14 +8,14 @@ Videos
 {% block content %}
 
 
-    <form enctype="multipart/form-data" method="POST" action="">{% csrf_token %} 
+    <form enctype="multipart/form-data" method="POST" action="{% url 'upload' %}">{% csrf_token %} 
         <div class="input-group">
           <input type="file" name="video" multiple accept="video/*" class="form-control" >
           <button class="btn btn-outline-secondary" type="submit"> Upload New Video </button> 
         </div>       
     </form>
 
-    <form action="" method="GET">
+    <form action="{% url 'upload' %} method="GET">
 
         <div class="list-group">
         {% for video in video_list %}
@@ -29,9 +29,11 @@ Videos
                     <div class="col-md-8">
                          <div class="card-body">
                             <h7  class="card-title"> {{video.title}} </h7>
-                            <h5 class="mb-1">Статус: {{video.status}}</h5>
-			                <h5 class="mb-1">Прогресс {{video.progress}}%</h5>
-                            <h5 class="mb-1">Результат {{video.num_faces}}</h5>
+                            <h5 class="mb-1" id="status_h{{video.id}}">Статус </h5>
+			                <div class="progress">
+                                <div class="progress-bar" id = "progressBar{{video.id}}" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 25%" ></div>
+                            </div>
+                            <h5 class="mb-1" id = "result_h{{video.id}}">Результат </h5>
                             <a href="{% url 'cancel' video.id %}" class="mb-1"> Пауза/Отмена </a>
                         </div>
                     </div>
@@ -42,14 +44,47 @@ Videos
     </form>
 {% endblock %}
 
-<!--             <a href="{% url 'cancel' video.id %}"class="list-group-item list-group-item-action">
-            {{video.title}}
-            <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">Статус</h5>
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                </div>
-                <h5 class="mb-1">Результат</h5>
-            </div>
-            </a><br> -->
+{% block add_script %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+        $.ajax({
+            type: "GET",
+            url: 'get_task_list',
+            success: function (data) {
+                data.video_list.forEach(element => {
+                    get_video_info(element.id)
+                });
+            }
+        });  
+        function updateProgress(percentage, id){
+        var progressBar = $(`#progressBar${id}`);
+        progressBar.attr('style', `width: ${percentage}%`);
+        progressBar.html(`${percentage}%`) 
+        }
+       
+        function get_video_info(id) {
+            var status_hdr = $(`#status_h${id}`);
+            
+            var result_hdr = $(`#result_h${id}`);
+
+            $.ajax({
+                    type: 'get',
+                    url: 'get_task_info',
+                    data: {'v_id': id},
+                    success: function (data) {
+                        status_hdr.html('Статус ' + data.status)  
+                        updateProgress(data.progress, id)
+                        result_hdr.html('Текущий результат ' + data.result)
+                        if( data.status != "completed" && data.status != "canceled" )
+                        {  setTimeout(function () {
+                                get_video_info(id)
+                            }, 1000);
+                        }            
+                    }  
+                
+                })
+        }   
+        
+    </script>
+{% endblock %} 
+
