--- a/VideoFacesDetection/templates/video.html
+++ b/VideoFacesDetection/templates/video.html
@@ -16,7 +16,9 @@
 
 		<div class="card-body">
 			<h5 class="mb-1" id = "status_h">Статус </h5>
-			<h5 class="mb-1" id = "progress_h">Прогресс </h5>
+			<div class="progress">
+                <div class="progress-bar" id = "progressBar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 25%" ></div>
+            </div>
             <h5 class="mb-1" id = "result_h">Результат</h5>
         </div>
         
@@ -49,6 +51,11 @@
             var status_hdr = $(`#status_h`);
             var progress_hdr = $(`#progress_h`);
             var result_hdr = $(`#result_h`);
+            function updateProgress(percentage){
+                var progressBar = $('#progressBar');
+                progressBar.attr('style', `width: ${percentage}%`);
+                progressBar.html(`${percentage}%`) 
+            }
 
             $.ajax({
                     type: 'get',
@@ -56,7 +63,7 @@
                     data: {'v_id': id},
                     success: function (data) {
                         status_hdr.html(data.status)  
-                        progress_hdr.html(data.progress) 
+                        updateProgress(data.progress)
                         result_hdr.html(data.result)
                         if( data.status != "completed" && data.status != "canceled" )
                         {  setTimeout(function () {
